=====================================
Date	  : Version: Description
=====================================

2019-07-16: v1.0.0 : Initial release.
2019-10-21: v1.0.1 : Fixed case bug in ID.
                     Added redirect to PayBatch as well.
                     Added redirect to client invoices on failure.
                     Added PayBatch notify.
2019-10-31: v1.0.2 : Better recurring handling using dedicated PayBatch cron scripts.
2019-11-07: v1.0.3 : Added check for valid token format in callback.
                     Added "Pay" button to invoicing.
2019-11-30: v1.0.4 : Added auto currency convert feature for loaded currencies (PayBatch).
2020-06-16: v1.0.5 : Use database rather than session for order information.
                     Standalone crons capability.
                     Consolidated bug fixes.
2020-10-18: v1.0.6 : Added check for already paid invoice.
                     Update WSDL url to correct syntax.

2022-10-10: v1.0.7 : Add token support for returning customers in PayHost.
                     Tested with WHMCS 8.5.1.