@@ -1,12 +1,12 @@
 # PayBatch_PayHost_WHMCS
-## PayGate PayBatch (with PayHost tokenization) plugin v1.0.7 for WHMCS v8.5.1
+## PayGate PayBatch (with PayHost tokenization) plugin v1.0.8 for WHMCS v8.6.1
 
 This is the PayGate PayBatch (with PayHost tokenization) for WHMCS. Please feel free to contact the PayGate support team at supportsa@dpogroup.com should you require any assistance.
 
 We suggest thorough testing with your use case in staging before proceeding to a live environment.
 
 ## Installation
-Please navigate to the [releases page](https://github.com/PayGate/PayBatch_PayHost_WHMCS/releases), download the latest release (v1.0.7) and unzip. You will then be able to follow the integration guide which is included in the zip.
+Please navigate to the [releases page](https://github.com/PayGate/PayBatch_PayHost_WHMCS/releases), download the latest release (v1.0.8) and unzip. You will then be able to follow the integration guide which is included in the zip.
 
 ## Collaboration
 
