@@ -1,4 +1,4 @@
-{* Copyright (c) 2020 PayGate (Pty) Ltd
+{* Copyright (c) 2023 PayGate (Pty) Ltd
  *
  * Author: App Inlet (Pty) Ltd
  *
